--- a/lib.html
+++ b/lib.html
@@ -74,7 +74,7 @@
     {{/each}}
   {{else}}
 
-    <div class="text-center">Hover over a template</div>
+    <div class="text-center text-main">Hover over a template.<br/> Feel free to drag me around and resize me.</div>
 
   {{/if}}
 
