--- a/lib.html
+++ b/lib.html
@@ -102,7 +102,7 @@
 
   {{else}}
 
-    <div class="text-center text-main">Select a template by clicking on it or hover over one.<br/> Also, feel free to drag me around and resize me.</div>
+    <div class="text-center text-main">Select a template in the list or hover over one in the DOM.<br/> Also, feel free to drag me around and resize me.</div>
 
   {{/if}}
 
